Fix the FAQ section width jumping around on different viewport widths

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -789,22 +789,18 @@ table.sponsor-tiers td:first-child {
   font-weight: bold;
 }
 
-.donate .container {
-  max-width: none;
-}
-
 div.newsletter-image-caption {
-    text-align: center;
-    font-size: 0.6em;
-    margin-top: -3em;
-    margin-bottom: 3em;
+  text-align: center;
+  font-size: 0.6em;
+  margin-top: -3em;
+  margin-bottom: 3em;
 }
 
 div.newsletter-image-caption a {
-    font-size: inherit;
-    letter-spacing: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
 }
 
 th {
-    font-weight: 600;
+  font-weight: 600;
 }
